# simple_blog

./: .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt
accounts/: apps.py  forms.py  models.py  tasks.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_userprofile_profile_image.py  0003_alter_userprofile_profile_image.py  0004_alter_userprofile_bio.py
accounts/services/: email.py  image_resize.py
accounts/templates/: email_message.txt
accounts/templates/accounts/: log_in.html  profile.html  sign_up.html  user_update.html
accounts/tests/: test_forms.py  test_views.py
api/: permissions.py  serializers.py  urls.py  views.py
blog/: forms.py  models.py  services.py  urls.py  utils.py  views.py
blog/migrations/: 0001_initial.py  0002_comment.py  0002_tag_post_tags.py  0003_alter_post_options_alter_tag_options_post_author_and_more.py  0003_comment_post.py  0004_tag_author.py
blog/modules/: scrapper.py  services.py
blog/templates/blog/: index.html  log_in.html  newsfeed.html  post_create.html  post_delete.html  post_detail.html  post_update.html  posts.html  profile.html  sign_up.html  tag_create.html  tag_delete.html  tag_detail.html  tag_update.html  tags.html
blog/templates/blog/includes/: footer.html  post_card.html
templates/: base.html
web/: celery.py  settings.py  urls.py  views.py
